tests/baselines/reference/modularizeLibrary_UsingES5LibNodeLibAndDomLib.errors.txt
lib.dom.d.ts(12899,13): error TS2300: Duplicate identifier 'console'.
lib.node.d.ts(157,19): error TS2300: Duplicate identifier 'console'.
tests/cases/compiler/modularizeLibrary_UsingES5LibNodeLibAndDomLib.ts(5,25): error TS2339: Property 'Console' does not exist on type 'Console'.


==== tests/cases/compiler/modularizeLibrary_UsingES5LibNodeLibAndDomLib.ts (1 errors) ====
    
    import fs = require("fs");
    import Console = require("console");
    
    var myLog = new Console.Console(fs.createWriteStream(".\Output"));
                            ~~~~~~~
!!! error TS2339: Property 'Console' does not exist on type 'Console'.
    myLog.log("Logging to myLog");
    myLog.trace("show me the trace");
    
    console.log("No Error using node console");
    console.log(`Current Directory ${process.cwd()}`);
    console.error("Report error");
    